--- a/website/package.json
+++ b/website/package.json
@@ -8,15 +8,15 @@
     "start": "next start -p 3000",
     "lint": "eslint"
   },
-  "dependencies": {
-    "next": "16.0.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
-  },
-  "devDependencies": {
-    "eslint": "^9",
-    "eslint-config-next": "16.0.4"
-  }
+"dependencies": {
+  "next": "^15.3.3",
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0",
+  "react-icons": "^5.5.0"
+},
+"devDependencies": {
+  "eslint": "^9",
+  "eslint-config-next": "^15.3.3"
+}
 }
 
